# rust-boilerplate

./: Cargo.toml  README.md
src/: cli.rs  main.rs
