[package]
name = "rust-boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General purpose code helper
anyhow = "1"
better-panic = "0.3"

# Commandline stuff
clap = { version="3.0.0", features=["derive", "cargo"] }
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15"

# Common libraries
strum = "0.24"
strum_macros = "0.24"
chrono = { version="0.4", features=["serde"] }
crossbeam-channel = "0.5"
serde = "1"
serde_derive = "1"

[dev-dependencies]
rstest = "0.14"
rstest_reuse = "0.3"
pretty_assertions = "1"
